# lbsolve

./: .bandit_baseline  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
src/: solution_finder.py
src/lbsolve/: __main__.py  game_dictionary.py  letter_boxed_solver.py  solution_finder.py  type_defs.py
tests/: test_game_dictionary.py  test_letter_box_solver.py  test_solution_finder.py
