[project]
name = "lbsolve"
version = "0.0.1"
description = "Solves NYT Letter Boxed puzzles"
requires-python = ">=3.11"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-n auto --cov=lbsolve --cov-report html"
pythonpath = "."

[tool.black]
extend-exclude = '''(
    '\.env.*' |
    \.venv.*'
)'''

[tool.flake8]
ignore = ['E203', 'W503', 'W504']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true
exclude =[
    '.git',
    '.github',
    '.pytest_cache',
    '.vscode',
    '.venv',
    '.env',
    '__pycache__',
    'htmlcov',
]

[tool.pylint]
ignore="tests"

[tool.coverage.run]
branch = true
source = ['src']

[tool.coverage.report]
fail_under = 95
skip_empty = true